[project]
name = "hypogen"
version = "0.1.0"
description = "HyPoGen: Hypernetwork-based Policy Generation for Meta-Learning"
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = {text = "MIT"}


dependencies = [
    # Core ML/DL frameworks
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "numpy>=1.24.3,<1.25.0",
    "scipy>=1.13.1",
    "scikit-learn>=1.6.1",
    # RL and Control
    "dm-control==1.0.15",
    "gym>=0.23.1",
    "mujoco==3.0.0",
    "dm-env>=1.6",
    "dm-tree>=0.1.8",
    "learn2learn>=0.1.7",
    "hypnettorch>=0.0.4",
    "contextual-control-suite @ git+https://github.com/SAIC-MONTREAL/contextual-control-suite.git",
    # Configuration and utilities
    "hydra-core>=1.2.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.2",
    "joblib>=1.4.2",
    # Data processing and visualization
    "pandas>=1.3.0",
    "matplotlib>=3.5.2",
    "seaborn>=0.11.2",
    "opencv-python>=4.5.3.56",
    "imageio>=2.9.0",
    "imageio-ffmpeg>=0.4.4",
    # ML utilities
    "tqdm>=4.67.1",
    "einops>=0.8.1",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "accelerate>=1.7.0",
    "huggingface-hub>=0.31.2",
    "safetensors>=0.5.3",
    # Mathematical optimization
    "cvxpy>=1.6.5",
    "qpth>=0.0.18",
    # Development and debugging
    "ipython>=8.18.1",
    "ipdb>=0.13.9",
    "pytest",
    "black",
    "flake8",
    # Additional utilities
    "cloudpickle>=3.1.1",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "gitpython>=3.1.44",
    "packaging>=25.0",
    "pip>=25.1.1",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "hydra-joblib-launcher>=1.2.0",
    "hydra-submitit-launcher>=1.1.5",
    "submitit>=1.5.2",
    "nvidia-ml-py>=12.575.51",
    "nvitop>=1.5.1",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
override-dependencies = [
    "pyparsing==3.0.0",
]
